--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
     "scripts": {
-        "start": "nodemon server.js --ignore node_modules public/ env"
+        "start": "nodemon server.js --ignore node_modules public/ env",
+        "webpack": "webpack --watch --display-max-modules 0"
     },
     "dependencies": {
+        "autoprefixer": "^8.5.0",
         "axios": "^0.18.0",
+        "babel-loader": "^7.1.4",
+        "babel-preset-env": "^1.7.0",
         "body-parser": "^1.18.2",
+        "css-loader": "^0.28.11",
         "disconnect": "^1.2.1",
         "express": "^4.16.3",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "global": "^4.3.2",
         "helmet": "^3.12.0",
         "lodash": "^4.17.10",
         "mongoose": "^5.0.17",
+        "node-sass": "^4.9.0",
+        "optimize-css-assets-webpack-plugin": "^4.0.1",
         "path": "^0.12.7",
-        "pug": "^2.0.3"
+        "postcss-loader": "^2.1.5",
+        "pug": "^2.0.3",
+        "sass-loader": "^7.0.1",
+        "webpack": "^4.8.3",
+        "webpack-cli": "^2.1.3"
     }
 }
